--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,5 @@
 <div
-  class="tw-max-w-3xl tw-w-full tw-m-auto tw-min-h-screen"
-  [ngClass]="showHeader ? 'tw-pt-14' : ''"
-  [ngClass]="showFooter ? 'tw-pb-12' : ''"
->
+  class="tw-max-w-3xl tw-w-full tw-m-auto tw-min-h-screen tw-pt-14 tw-pb-12">
   <app-header *ngIf="showHeader"></app-header>
   <app-item-header
     *ngIf="!showHeader"
@@ -11,7 +8,7 @@
   ></app-item-header>
 
   <div
-    class="tw-w-full tw-overflow-x-hidden tw-border tw-border-t-0 tw-border-solid tw-border-[rgba(0,0,0,0.1)]"
+    class="tw-w-full tw-overflow-x-hidden"
   >
     <router-outlet />
   </div>
