--- a/src/app/checkout/checkout.component.html
+++ b/src/app/checkout/checkout.component.html
@@ -101,7 +101,7 @@
     </div>
   </div>
   <div>
-    <h2 class="tw-text-lg tw-font-medium tw-leading-[21px] tw-text-[#424242]">
+    <h2 class="tw-text-lg tw-font-medium tw-leading-[21px] tw-text-[#424242] tw-mb-[15px]">
       Bill Details
     </h2>
     <div class="tw-mb-[29px]">
