--- a/src/app/item-header/item-header.component.html
+++ b/src/app/item-header/item-header.component.html
@@ -1,5 +1,5 @@
 <div
-  class="tw-h-14 tw-bg-white tw-flex tw-justify-between tw-items-center tw-pr-3"
+  class="tw-h-14 tw-bg-white tw-flex tw-justify-between tw-items-center tw-pr-3 tw-z-10 tw-fixed tw-top-0 tw-left-2/4 tw--translate-x-2/4 tw-max-w-3xl tw-w-full tw-shadow-[0px_2px_2px_0px_rgba(0,0,0,0.1)]"
 >
   <button
     class="tw-border-0 tw-outline-none tw-bg-white tw-p-3"
