--- a/src/styles.css
+++ b/src/styles.css
@@ -10,3 +10,8 @@
   font-optical-sizing: auto;
   font-style: normal;
 }
+html, body {
+  touch-action: manipulation; /* Prevent double tap zoom on some mobile browsers */
+  -ms-touch-action: manipulation; /* For Internet Explorer */
+  overscroll-behavior-y: contain; /* Prevent rubber-banding effect */
+}
