added popover and fix scroll issue

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,3 +14,9 @@
   </div>
   <app-footer *ngIf="showFooter"></app-footer>
 </div>
+
+<div class="tw-fixed tw-bottom-12 tw-left-0 tw-z-20 tw-w-full tw-text-sm tw-text-white tw-bg-black tw-h-9">
+  <div class="tw-px-3 tw-py-2">
+      <p>Your order is on the way</p>
+  </div>
+</div>
