--- a/src/app/category/category.component.html
+++ b/src/app/category/category.component.html
@@ -1,8 +1,8 @@
 
 
-<div class="tw-bg-[#05162E] tw-h-[49px]">
+<div class="tw-bg-[#05162E] tw-h-[49px] tw-overflow-hidden">
   <nav
-    class="tw-block tw-h-full tw-overflow-x-auto tw-overflow-y-hidden tw-w-full"
+    class="tw-block tw-h-[69px] tw-pb-5 tw-overflow-x-auto tw-overflow-y-hidden tw-w-full"
   >
     <ul
       class="tw-flex tw-justify-start tw-items-center tw-gap-[38px] tw-h-full tw-min-w-full tw-flex-row"
