fix tolltip UI issue

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,8 +15,14 @@
   <app-footer *ngIf="showFooter"></app-footer>
 </div>
 
-<div class="tw-fixed tw-bottom-12 tw-left-0 tw-z-20 tw-w-full tw-text-sm tw-text-white tw-bg-black tw-h-9">
-  <div class="tw-px-3 tw-py-2">
-      <p>Your order is on the way</p>
-  </div>
+<div class="tw-fixed tw-bottom-12 tw-left-0 tw-z-20 tw-w-full tw-text-sm tw-text-white tw-bg-[#A4C8E9] tw-h-7">
+  <p class="tw-flex tw-gap-[9px] tw-items-center tw-px-4 tw-h-7">
+    <span>
+      <svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" viewBox="0 0 15 15" fill="none">
+        <circle cx="7.5" cy="7.5" r="6.5" stroke="#18262D" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+        <path d="M7.5 3.59998V7.49998L9.45 9.44998" stroke="#18262D" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+      </svg>
+  </span>
+  <span class="tw-text-[#424242]">Your order is on its way!</span>
+</p>
 </div>
