--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -34,8 +34,9 @@
       </p>
       <button
         class="tw-block tw-w-[132px] tw-font-medium tw-h-8 tw-bg-white tw-shadow-[0px_2px_2px_0px_rgba(255,125,11,0.3)] tw-text-[#05162E] tw-text-[12px] tw-leading-[15px]"
+        (click)="onCategoryClick(categories[0])"
       >
-        Go to Item
+        View Menu
       </button>
     </div>
     <div class="tw-min-w-[110px] tw-h-[53px]">
@@ -189,4 +190,38 @@
       </div>
     </div>
   </div>
+</div>
+<div
+  class="tw-fixed tw-bottom-12 tw-left-0 tw-z-20 tw-w-full tw-text-sm tw-text-white tw-bg-[#A4C8E9] tw-h-7"
+  *ngIf="isOrderPlaced"
+>
+  <p class="tw-flex tw-gap-[9px] tw-items-center tw-px-4 tw-h-7">
+    <span>
+      <svg
+        xmlns="http://www.w3.org/2000/svg"
+        width="15"
+        height="15"
+        viewBox="0 0 15 15"
+        fill="none"
+      >
+        <circle
+          cx="7.5"
+          cy="7.5"
+          r="6.5"
+          stroke="#18262D"
+          stroke-width="2"
+          stroke-linecap="round"
+          stroke-linejoin="round"
+        />
+        <path
+          d="M7.5 3.59998V7.49998L9.45 9.44998"
+          stroke="#18262D"
+          stroke-width="2"
+          stroke-linecap="round"
+          stroke-linejoin="round"
+        />
+      </svg>
+    </span>
+    <span class="tw-text-[#424242]">Your order is on its way!</span>
+  </p>
 </div>
