make category cards align left

--- a/src/app/category/category.component.html
+++ b/src/app/category/category.component.html
@@ -26,7 +26,7 @@
 </div>
 
 <div class="tw-bg-white tw-px-3 tw-py-[19px]">
-  <div class="tw-flex tw-flex-row tw-gap-[17px] tw-flex-wrap tw-justify-center">
+  <div class="tw-flex tw-flex-row tw-gap-[17px] tw-flex-wrap tw-justify-center xs:tw-justify-start">
     <div
       class="tw-w-[165px] tw-h-[213px] tw-rounded-[4px] tw-px-[6px] tw-py-[9px] tw-shadow-[0px_4px_4px_4px_rgba(0,0,0,0.05)]"
       *ngFor="let item of getMenuItemsForSelectedCategory()"
