Room Id localsotrage working

--- a/src/app/checkout/checkout.component.html
+++ b/src/app/checkout/checkout.component.html
@@ -26,7 +26,7 @@
       <div
         class="tw-text-sm tw-font-normal tw-leading-[17px] tw-text-[rgba(66,66,66,1)]"
       >
-        103
+        {{ roomId }}
       </div>
     </div>
   </div>
@@ -101,7 +101,9 @@
     </div>
   </div>
   <div>
-    <h2 class="tw-text-lg tw-font-medium tw-leading-[21px] tw-text-[#424242] tw-mb-[15px]">
+    <h2
+      class="tw-text-lg tw-font-medium tw-leading-[21px] tw-text-[#424242] tw-mb-[15px]"
+    >
       Bill Details
     </h2>
     <div class="tw-mb-[29px]">
