--- a/src/app/empty-cart/empty-cart.component.html
+++ b/src/app/empty-cart/empty-cart.component.html
@@ -26,7 +26,7 @@
       <div
         class="tw-text-sm tw-font-normal tw-leading-[17px] tw-text-[rgba(66,66,66,1)]"
       >
-        103
+        {{ roomId }}
       </div>
     </div>
   </div>
