--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -17,7 +17,9 @@
       />
     </svg>
   </span>
-  <p class="tw-text-sm tw-font-medium tw-leading-[17px]">Room Number 103</p>
+  <p class="tw-text-sm tw-font-medium tw-leading-[17px]">
+    Room Number {{ roomId }}
+  </p>
 </div>
 <div class="tw-min-h-[183px] tw-bg-[#05162E] tw-py-5 tw-pr-4 tw-pl-7">
   <div class="tw-flex tw-justify-between tw-items-center tw-flex-row tw-gap-5">
