--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -194,7 +194,7 @@
   </div>
 </div>
 <div
-  class="tw-fixed tw-bottom-12 tw-left-0 tw-z-20 tw-w-full tw-text-sm tw-text-white tw-bg-[#A4C8E9] tw-h-7"
+  class="tw-fixed tw-bottom-12 tw-z-20 tw-w-full tw-text-sm tw-text-white tw-bg-[#A4C8E9] tw-h-7 tw-left-2/4 tw--translate-x-2/4 tw-max-w-3xl"
   *ngIf="isOrderPlaced"
 >
   <p class="tw-flex tw-gap-[9px] tw-items-center tw-px-4 tw-h-7">
